# kcode

./: .gitignore  DEVIATIONS.md  Dockerfile  KCODE-Implementation-Plan.md  KCODE.md  LICENSE  MAINTENANCE.md  README.md  REGRESSION.md  docker-compose.yml  harness engineering guidance.md
deploy/: kcode-bridge.service
rust/crates/adapters/: Cargo.toml
rust/crates/adapters/src/: config_validator.rs  feishu.rs  feishu_transport.rs  lib.rs  media_download.rs  session_router.rs  telegram.rs  telegram_transport.rs  transport.rs  webhook_server.rs  whatsapp.rs  whatsapp_transport.rs
rust/crates/kcode-cli/: Cargo.toml
rust/crates/kcode-cli/src/: args.rs  bridge_core.rs  init.rs  init_defaults.rs  main.rs  render.rs  render_theme.rs
rust/crates/kcode-cli/src/main_parts/: bridge_repl_types.rs  cli_action.rs  cli_parse.rs  cli_parse_support.rs  init_diff_utils.rs  live_cli_core.rs  live_cli_misc_actions.rs  live_cli_repl_command.rs  live_cli_session_state.rs  live_cli_tui.rs  live_cli_tui_support.rs  main_entry.rs  plan_mode_support.rs  provider_runtime_client_impl.rs  resume_command.rs  runtime_builder.rs  setup_git.rs  status_basics.rs  tests_args_basic.rs  tests_args_commands.rs  tests_bridge_runtime.rs  tests_help_permissions.rs  tests_plan_mode.rs  tests_reports_status.rs  tests_support.rs  tool_executor_help.rs  tool_formatting.rs  tool_summary_helpers.rs  ts_tui_launcher.rs  tui_permission_prompt.rs
rust/crates/kcode-cli/src/tui/: mod.rs  render.rs  render_parts.rs  state.rs
rust/crates/kcode-cli/tests/: cli_flags_and_config_defaults.rs  resume_slash_commands.rs
(+121 files in other folders)
