[package]
name = "kcode-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "kcode"
path = "src/main.rs"

[dependencies]
adapters = { path = "../adapters" }
api = { path = "../api" }
bridge = { path = "../bridge" }
commands = { path = "../commands" }
crossterm = "0.28"
pulldown-cmark = "0.13"
ratatui = "0.29"
rustyline = "15"
runtime = { path = "../runtime" }
plugins = { path = "../plugins" }
serde_json.workspace = true
syntect = "5"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time"] }
tools = { path = "../tools" }

[lints]
workspace = true
